tests/ui/regions/closure-in-projection-issue-97405.stderr
error[E0310]: the associated type `<impl Iterator as Iterator>::Item` may not live long enough
  --> $DIR/closure-in-projection-issue-97405.rs:24:5
   |
LL |     assert_static(opaque(async move { t; }).next());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     the associated type `<impl Iterator as Iterator>::Item` must be valid for the static lifetime...
   |     ...so that the type `<impl Iterator as Iterator>::Item` will meet its required lifetime bounds
   |
   = help: consider adding an explicit lifetime bound `<impl Iterator as Iterator>::Item: 'static`...

error[E0310]: the associated type `<impl Iterator as Iterator>::Item` may not live long enough
  --> $DIR/closure-in-projection-issue-97405.rs:26:5
   |
LL |     assert_static(opaque(move || { t; }).next());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     the associated type `<impl Iterator as Iterator>::Item` must be valid for the static lifetime...
   |     ...so that the type `<impl Iterator as Iterator>::Item` will meet its required lifetime bounds
   |
   = help: consider adding an explicit lifetime bound `<impl Iterator as Iterator>::Item: 'static`...

error[E0310]: the associated type `<impl Iterator as Iterator>::Item` may not live long enough
  --> $DIR/closure-in-projection-issue-97405.rs:28:5
   |
LL |     assert_static(opaque(opaque(async move { t; }).next()).next());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     the associated type `<impl Iterator as Iterator>::Item` must be valid for the static lifetime...
   |     ...so that the type `<impl Iterator as Iterator>::Item` will meet its required lifetime bounds
   |
   = help: consider adding an explicit lifetime bound `<impl Iterator as Iterator>::Item: 'static`...

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0310`.
